yaml/elk/elk-cluster.yaml
kind: List
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: kb-single
    labels:
      name: kb-single
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: kb-single
    template:
      metadata:
        name: kb-single
        labels:
          app: kb-single
          name: kb-single
      spec:
        containers:
        - image: registry.cn-hangzhou.aliyuncs.com/aliyunly/images:docker.elastic.co-kibana-kibana.6.4.0
          name: kb
          ports:
          - name: http
            containerPort: 5601
- apiVersion: v1
  kind: Service
  metadata:
    name: kb-single-svc
    labels:
      name: kb-single
  spec:
    # type: NodePort
    ports:
    - name: http
      port: 5601
      targetPort: 5601 
      nodePort: 32601
    selector:
      app: kb-single            
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: es-cluster
  spec:
    serviceName: es-cluster
    replicas: 3
    selector:
      matchLabels:
        app: es-cluster
    template:
      metadata:
        name: es-cluster
        labels:
          app: es-cluster
          name: kb-single
      spec:
        containers:
        - image: registry.cn-hangzhou.aliyuncs.com/aliyunly/images:docker.elastic.co-elasticsearch-elasticsearch.6.4.0
          name: es
          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
          - name: es-cluster-data
            mountPath: /usr/share/elasticsearch/data
        volumes:
          - name: es-cluster-data
            emptyDir: {}
- apiVersion: v1
  kind: Service
  metadata:
    name: es-cluster
    labels:
      name: kb-single
  spec:
    clusterIP: None
    ports:
    - name: http
      port: 9200
    - name: tcp
      port: 9300
    selector:
      app: es-cluster
